[tool.poetry]
name = "zaldisalgo"
version = "0.1.0"
description = "Python library with different algorithms."
authors = ["Denys Zaluzhnyi <denys.zaluzhnyi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
